# fastapi-rag-service

./: .env.example  README.md  pyproject.toml
app/: main.py
app/api/: v1.py
app/core/: config.py
