[project]
name = "fastapi-rag-service"
version = "0.1.0"
description = "RAG service with FastAPI, Postgres+pgvector, Redis, OTel, and FREE_MODE mock LLM."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "psycopg[binary,pool]>=3.2.1",
  "redis>=5.0.4",
  "python-dotenv>=1.0.1",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-exporter-otlp>=1.25.0",
]

[tool.uvicorn]
factory = false